# hrodvitnir-core

./: .clang-format  .gitignore  CMakeLists.txt  LICENSE  README.md  format-source.sh  run-cmake.sh
.reuse/: dep5
bitcommons/: CMakeLists.txt
bitcommons/include/bitcommons/: abstract_byte_source.hpp  bitreader-utils.hpp  bitreader.hpp  bitwriter.hpp  direct_file_reader.hpp  file_byte_source.hpp  file_reader.hpp  memory_byte_source.hpp  shared_buffer.hpp
bitcommons/include/bitcommons/codings/: exp-golomb-k0.hpp  string-nullterm.hpp
bitcommons/src/: direct_file_reader.cpp  file_byte_source.cpp  memory_byte_source.cpp  shared_buffer.cpp
bitcommons/test/: CMakeLists.txt  bitreader_gtest.cpp  bitwriter_gtest.cpp  file_byte_source_gtest.cpp  gtest_common.hpp  gtest_common_gtest.cpp  memory_byte_source_gtest.cpp  shared_buffer_gtest.cpp
hrodvitnir-core/: CMakeLists.txt
hrodvitnir-core/include/hrodvitnir/core/: bitreader-helpers.hpp  box-binding.hpp  box-consumer.hpp  box-defs.hpp  box-property.hpp  ce_crc64.hpp  data-source-wrapper.hpp  data-source.hpp  field-ordering.hpp  fieldset.hpp  fourcc.hpp  meta-helpers.hpp  readspec.hpp  table.hpp  uuid.hpp
hrodvitnir-core/include/hrodvitnir/core/boxes/: avc-decoder-configuration-box.hpp  box.hpp  chunk-offset-box.hpp  clean-aperture-box.hpp  colour-information-box.hpp  composition-offset-box.hpp  edit-list-box.hpp  file-type.hpp  full-box.hpp  handler-box.hpp  media-header-box.hpp  movie-header-box.hpp  pixel-aspect-ratio-box.hpp  sample-dependency-type-box.hpp  sample-description-box.hpp  sample-entry-box.hpp  sample-size-box.hpp  sample-to-chunk-box.hpp  skipper-box.hpp  sound-media-header-box.hpp  sync-sample-box.hpp  time-to-sample-box.hpp  track-header-box.hpp  video-media-header-box.hpp  visual-sample-entry-box.hpp
hrodvitnir-core/include/hrodvitnir/core/parser/: box-parser.hpp  default-mapping.hpp  reader-mapping.hpp  simple-reader-mapping.hpp
hrodvitnir-core/include/hrodvitnir/core/tree/: tree-builder.hpp  tree-node.hpp  tree.hpp
hrodvitnir-core/src/: box-parser.cpp  default-mapping.cpp  fieldset.cpp  fourcc.cpp  simple-reader-mapping.cpp  tree-builder.cpp  tree-node.cpp  tree.cpp  uuid.cpp
hrodvitnir-core/test/: CMakeLists.txt  fourcc-gtest.cpp
hrodvitnir-dump/: CMakeLists.txt
hrodvitnir-dump/src/: any_printer.hpp  main.cpp
